# makercode

./: .gitignore  MAKER.txt  README.md  index.html  metadata.json  package.json  pnpm-lock.yaml  postcss.config.js  repomix-output.xml
scripts/: README.md  icon.js
src/: App.tsx  index.css  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  developer.json
src-tauri/src/: lib.rs  main.rs
src/components/: AgentManager.tsx  CodeEditor.tsx  CodeViewer.tsx  FileExplorer.tsx  GitHistory.tsx  MakerVisualizer.tsx  MergeConflictResolver.tsx  PlanEditor.tsx  SettingsPanel.tsx  StepDetailView.tsx  SystemLogs.tsx  TerminalView.tsx  Toast.tsx  VersionControl.tsx  VotingInspector.tsx
src/components/layout/: BottomPanel.tsx  ControlBar.tsx  SessionTabs.tsx  Sidebar.tsx  TopBar.tsx
src/services/: contextManager.ts  gitService.ts  llm.ts  logger.ts  makerService.ts  projectService.ts  tauriBridge.ts  toolService.ts  virtualFileSystem.ts
src/services/engine/: decompositionService.ts  stepExecutor.ts  votingService.ts
src/services/languages/: interface.ts  python.ts  registry.ts  rust.ts  typescript.ts
src/services/prompts/: index.ts
