[package]
name = "makercode"
version = "0.1.0"
description = "A refined, agentic code editor implementing the MAKER framework"
authors = ["MakerCode Team"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
git2 = { version = "0.19", features = ["vendored-openssl"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
